Mobile theme W.I.P.: - Fix infolog list alignment

--- a/infolog/templates/pixelegg/app.less
+++ b/infolog/templates/pixelegg/app.less
@@ -168,6 +168,9 @@ button#infolog-edit_timestamp {
   top: 13px;
 }
 
+#infolog-index table.egwGridView_grid {	 
+   img{height: 16px;}
+}
 /* tablets and smartphones  */
 @media only screen and (max-device-width:1024px) {
 
@@ -192,15 +195,17 @@ button#infolog-edit_timestamp {
 	}
 	label[id^='infolog-index_'][id$='info_enddate]'] {
 		.mob-fontsize-xs;
-		float:left;
+		
 		time {
-			float: left;
+			float: none;
 			font-weight: normal;
 		}
 	}
 	label[id^='infolog-index_'][id$='info_startdate]']{
-		float: left;
 		.mob-fontsize-xs;
+		time {
+			float: none;
+		}
 	}
 	ul[id^='infolog-index_'][id$='info_responsible]'] {
 		overflow:hidden;
@@ -252,6 +257,20 @@ button#infolog-edit_timestamp {
 		tr.dialogHeadbar{
 			div.et2_hbox {
 				display:none;
+			}
+		}
+	}
+	.infolog_CompletedClmn {
+		.infoPercent{
+			height:23px;
+			float:right;
+		}
+		.infoType{
+			position: relative;
+			height: 30px;
+			img{
+				position: absolute;
+				right:0;
 			}
 		}
 	}
